--- a/act_Application/Views/Aportar/Create.cshtml
+++ b/act_Application/Views/Aportar/Create.cshtml
@@ -67,7 +67,7 @@
                 <label asp-for="Valor">Monto:</label>
                 <div class="input-container">
                     <span class="dollar-sign">$</span>
-                    <input asp-for="Valor" class="input-monto" type="number" step="0.01" min="0.01"/>
+                    <input asp-for="Valor" class="input-monto" type="number" min="5" step="0,50" />
                     <span asp-validation-for="Valor" class="text-danger"></span>
                 </div>
             </div>
